# DefensioMiner

./: .gitignore  README.md  package-lock.json  package.json
scripts/: build-solver.js
solver/: Cargo.toml
solver/src/: lib.rs  rom.rs
src/: cli.js
src/commands/: donate.js  generate.js  register.js  start.js
src/config/: index.js
src/lib/cardano/: addressManager.js  keyAgentFactory.js  mnemonic.js  network.js
src/lib/utils/: args.js  files.js  logger.js
src/lib/wallets/: index.js
src/miner/: automate-solver.js  poll.js
