[package]
name = "ashmaize"
version = "0.1.0"
edition = "2024"
license = "MIT Or Apache-2.0"
repository = "https://github.com/input-output-hk/ce-ashmaize"

[dependencies]
cryptoxide = "~0.5.1"
dashmap = "5"
hex = "0.4"
num_cpus = "1.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
randomx-rs = "1.3"
indicatif = "0.17"
getrandom = "0.3"
